{
    "name": "AllInput",
    "maps": [
        {
            "name": "Phone",
            "id": "4793f1b3-1c13-4d13-9498-ed7510c6482f",
            "actions": [
                {
                    "name": "TouchPres",
                    "type": "Button",
                    "id": "aa6b4f01-701a-4696-9bc3-ab06e533559d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "677082e3-39e3-451f-98c7-9eef64daecd9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Gyroscope",
                    "type": "PassThrough",
                    "id": "053a54b1-e508-4278-accd-5caf6de14ae9",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyUp",
                    "type": "Button",
                    "id": "784c408f-0c5b-4d75-8c63-d3c8e5072336",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyDown",
                    "type": "Button",
                    "id": "e92b8446-bb95-422e-b5d8-4035f3898ec1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyLeft",
                    "type": "Button",
                    "id": "ce23ffdc-c844-4c85-9598-e2e56076f690",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyRight",
                    "type": "Button",
                    "id": "88dad5fd-7318-493e-8268-3994e344a38e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1760a31b-3a9c-471b-8dc7-eb08faa30547",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPres",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8f30146-2e30-4153-835a-efece8e46a5f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d388bc78-104a-4927-806f-b6837139773d",
                    "path": "<Gyroscope>/angularVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gyroscope",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c0e945a-2a23-4f79-bd2f-968408c83d47",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c48e03f8-8849-439f-a3e0-b9107a05c7cf",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "334b5803-3eef-4d3f-b9bc-d4cbca53142e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b4d3508-7b7b-4fec-95d2-02312e781733",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}